--- a/MemoryGame/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame/MemoryGame.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="Kinderspeelveld.cs" />
     <Compile Include="Kindwinscherm.cs" />
+    <Compile Include="MemoryGridKinderen.cs" />
     <Compile Include="Pauze menu.xaml.cs">
       <DependentUpon>Pauze menu.xaml</DependentUpon>
     </Compile>
@@ -210,6 +211,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\terugButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\assetskinder\Card.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
