--- a/MemoryGame/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame/MemoryGame.csproj
@@ -227,5 +227,8 @@
   <ItemGroup>
     <Resource Include="assets\assetskinder\Card.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="highscore.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
